--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-justify": "^0.0.1",
     "react-native-ratings": "^6.0.0",
     "react-native-vector-icons": "^6.1.0",
+    "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.4",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
