--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-grid-component": "^1.1.0",
-    "react-native-justify": "^0.0.1",
+    "react-native-linear-gradient": "^2.5.3",
     "react-native-ratings": "^6.0.0",
     "react-native-vector-icons": "^6.1.0",
-    "react-native-video": "^4.0.1",
     "react-navigation": "^3.0.4",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
