--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.8.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
+    "react-native-animatable": "^1.3.0",
     "react-native-blur": "^3.2.2",
     "react-native-drawer": "^2.5.1",
     "react-native-floating-action": "^1.13.0",
